--- a/testing/pytest.ini
+++ b/testing/pytest.ini
@@ -1,5 +1,5 @@
-[pytest]
-addopts = -vs
-
-python_functions = 'add_*'
-python_functions = 'div_*'
+;[pytest]
+;addopts = -vs
+;
+;python_functions = 'add_*'
+;python_functions = 'div_*'
