自动添加标签 初始化运行配置

--- a/testing/pytest.ini
+++ b/testing/pytest.ini
@@ -1,5 +1,8 @@
-;[pytest]
-;addopts = -vs
-;
-;python_functions = 'add_*'
-;python_functions = 'div_*'
+[pytest]
+
+python_files = 'abc_*.py'
+python_class = 'Login*'
+python_functions = 'calc_*'
+
+addopts = -vs -m "div or add"
+
