步骤参数化

--- a/testing/pytest.ini
+++ b/testing/pytest.ini
@@ -1,8 +1,9 @@
 [pytest]
 
-python_files = 'abc_*.py'
-python_class = 'Login*'
+;python_files = 'abc_*.py'
+;python_class = 'Login*'
 python_functions = 'calc_*'
 
 addopts = -vs -m "div or add"
+
 
